tweek layout to stop footer overlapping content

--- a/site/css/style.css
+++ b/site/css/style.css
@@ -14,23 +14,22 @@
   --themeButtonText: rgb(255, 255, 255);
   --themeBoxShadow: rgba(136, 136, 136, 0.4);
 }
-
 body {
   background-color: var(--themeBgColor);
   color: var(--themeFColor);
-  /* margin: 0px 30px; */
-  /* overflow: auto; */
-  overflow-y: auto;
+  display: grid;
+	grid-template-rows: auto 1fr auto;
+	grid-template-columns: auto;
+	min-height: 100vh;
   margin: 0px auto 10px auto;
-  width: 95%;
-  /* min-height: 100vh; */
+  overflow-y: auto;
 }
 .container {
   display: flex;
   flex-direction: column;
-  /* width: 80%; */
+  width: 90%;
   margin: 5px auto;
-  min-height: 75vh;
+  /* min-height: 75vh; */
 }
 .row {
   display: flex;
@@ -117,7 +116,7 @@ button:hover {
   justify-content: center;
   align-items: center;
   flex-direction: column;
-  margin-top: 50px;
+  margin: auto;
 }
 .mapsHeader {
   font-size: xx-large;
@@ -141,19 +140,28 @@ button:hover {
   margin: 0px 0px 10px;
 }
 .subTitleText {
+  font-family: optima;
   font-size: large;
   margin: 0px 0px 2px;
+  opacity: 0.8;
 }
 .subTitleImage {
   font-size: large;
   text-align: center;
 }
 .contentText {
-  font-size: medium;
+  font-family: optima;
+  font-size: small;
   margin: 2px 0px 10px;
+  opacity: 0.8;
 }
 .contentImage {
-  margin: 20px auto;
+  margin: auto;
+  min-height: 1fr;
+  min-width: 100%;
+  background-position: center; 
+  background-repeat: no-repeat; 
+  background-size: cover;
 }
 .layoutTopMargin {
   margin-top: 50px;
